--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.mail.host = smtp.gmail.com
+#spring.mail.username = tdkdevelopment14@gmail.com
+#spring.mail.password = Tapas2055@
+#spring.mail.port=587
+#spring.mail.properties.mail.smtp.starttls.enable = true
+#server.error.whitelabel.enabled=false
+#server.error.path=/error
+#server.error.whitelabel.enabled=false
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
