--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.mail.host = smtp.gmail.com
-#spring.mail.username = tdkdevelopment14@gmail.com
-#spring.mail.password = Tapas2055@
-#spring.mail.port=587
-#spring.mail.properties.mail.smtp.starttls.enable = true
-#server.error.whitelabel.enabled=false
-#server.error.path=/error
-#server.error.whitelabel.enabled=false
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.mail.host = smtp.gmail.com
+spring.mail.username = tdkdevelopment14@gmail.com
+spring.mail.password = Tapas2055@
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
+server.error.whitelabel.enabled=false
+server.error.path=/error
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+#spring.datasource.url=jdbc:mysql://remotemysql.com:3306/QAf07JE6Dx
+#spring.datasource.username=QAf07JE6Dx
+#spring.datasource.password=XOUwqs9ctd
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
