--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=1200
-#localhost -> 127.0.0.1
-spring.datasource.url=jdbc:mysql://localhost:3306/smartcontact
+spring.datasource.url=jdbc:mysql://localhost:3306/cryptocontact
 spring.datasource.username=root
 spring.datasource.password=Tapas2055@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,7 +16,3 @@ spring.mail.properties.mail.smtp.starttls.enable = true
 server.error.whitelabel.enabled=false
 server.error.path=/error
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
-#spring.datasource.url=jdbc:mysql://remotemysql.com:3306/QAf07JE6Dx
-#spring.datasource.username=QAf07JE6Dx
-#spring.datasource.password=XOUwqs9ctd
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
