--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.servlet.multipart.max-request-size=-1
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.mail.host = smtp.gmail.com
 spring.mail.username = tdkdevelopment14@gmail.com
-spring.mail.password = Tapas2055@
+spring.mail.password = Tapas
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable = true
 server.error.whitelabel.enabled=false
